--- a/Jessica Berry Signature.html
+++ b/Jessica Berry Signature.html
@@ -43,7 +43,7 @@
 						 </div> -->
 
 						 <div style="white-space: nowrap;">
-							<img src="email.png" alt="address" width="18" height="18" style="vertical-align: middle;">
+							<img src="https://raw.githubusercontent.com/ShahjalalK/Jessica-Berry-Signature/master/email.png" alt="address" width="18" height="18" style="vertical-align: middle;">
 			<a href="mailto:victorycoachjess@gmail.com" target="_blank" style="font-size: 11pt; color:gray; margin: 0; text-decoration: none; padding: 0; font-family: sans-serif;" >victorycoachjess@gmail.com</a>
 						 </div>
 
