--- a/Jessica Berry Signature.html
+++ b/Jessica Berry Signature.html
@@ -12,9 +12,9 @@
 		<tbody>
 	
 	<tr>
-		<td rowspan="1" style="padding-right: 5px;  " width="140"><img src="image.png" width="140" alt="" style=" border-radius: 50%; text-decoration: none; " alt=""></td>
+		<td rowspan="1" style="padding-right: 5px;  " width="140"><img src="https://raw.githubusercontent.com/ShahjalalK/Jessica-Berry-Signature/master/image.png" width="140" alt="" style=" border-radius: 50%; text-decoration: none; " alt=""></td>
 		
-		<td style="padding-left: 5px; padding-right: 15px;" >
+		<td style="padding-left: 5px; padding-right: 5px;" >
 						<div style="font-family: sans-serif;
 						font-size: 16pt; text-transform: uppercase; font-weight: bold;
 						color: #47444e ; margin: 0; line-height: 20px; " >Jessica Berry
@@ -83,7 +83,12 @@
 
 						
 
-		<td rowspan="1"  width="140" ><img src="signature4.jpg" alt="" style="object-fit: cover; border-left: 1px solid #e4e1e1; border-right: 1px solid #e4e1e1; border-radius: 3px;" height="160" alt=""></td>		
+		<td rowspan="1"  width="200" style="vertical-align: top; object-fit: cover;">
+			<div>
+				<img src="signature34.png" alt="" style="object-fit: cover; border-bottom: 1px solid #e4e1e1; border-top: 1px solid #e4e1e1; border-radius: 3px;  " width="200" alt="">
+			</div>	
+		</td>
+			
 	</tr>
 	
 	
